--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'com.android.support:design:27.0.0'
     implementation 'com.android.support:cardview-v7:27.0.0'
     implementation 'com.android.support:recyclerview-v7:27.0.0'
+    implementation 'com.facebook.fresco:fresco:1.8.1'
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     implementation 'com.android.support:support-v4:27.0.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
