FirebaseAuth UI als Library benutzt um die Authentification zu handlen Facebook und Google SignIn funktionieren nun. Die alten Dateien vom Facebook Login wurden gelöscht (damit auch die Referenz auf die Firebase Datenbank, müssen wir nochmal neu machen vor allem sauberer) Settings Activity aufgeräumt  - Logout Button in Settings hinzugefügt. ProfileActivity hinzugefügt (Über das Profil kommt man nun auf die Settings. AuthRunningActivity dient jetzt als Splashscreen (Wurde als LaunchActivity in der Manifestdatei deklariert. Diese Act. überprüft ob der User angemeldet ist oder nicht und startet dann eben die Signin oder direkt die Mainactivity. Hintergrund für den Splashscreen dient pasta.jpg Wichtig es muss noch der ganze backstack gehandlet werden. Danach sollten wir mit der Datenbank wieder anfangen.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ android {
         applicationId "com.jolameva.app.runningdinner"
         minSdkVersion 21
         targetSdkVersion 26
+        multiDexEnabled true
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -20,6 +21,10 @@ android {
 }
 
 dependencies {
+    implementation 'com.firebaseui:firebase-ui-auth:3.2.2'
+    implementation 'com.firebaseui:firebase-ui:3.2.2'
+    implementation 'com.google.firebase:firebase-auth:11.8.0'
+    implementation 'com.google.android.gms:play-services-auth:11.8.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.0.0'
     implementation 'com.facebook.android:facebook-login:[4,5)'
@@ -34,4 +39,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
 }
+apply plugin: 'com.google.gms.google-services'
+
