--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'com.facebook.fresco:fresco:1.8.1'
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     implementation 'com.android.support:support-v4:27.0.2'
+    implementation 'com.google.firebase:firebase-database:11.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
