--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     implementation 'com.android.support:support-v4:27.0.2'
     implementation 'com.google.firebase:firebase-database:11.8.0'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.3'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
