--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     implementation 'com.android.support:support-v4:27.0.2'
     implementation 'com.google.firebase:firebase-database:11.8.0'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.3'
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
+    implementation 'com.yarolegovich:lovely-dialog:1.0.4'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
