Neue FriendProfileAct. erstellt und OnClickListener für den Avatar im Chat hinzugefügt. In der Chat Activity gelangt man nun über einen Klick auf das Profilbild, zu einer neuen FriendProfileActivity. Im Grunde sieht sie genau so aus wie die ProfileAct. nur ohne die Einstellungen.  In der FriendProfileAct. werden dann die Informationen (Name, Bild, usw.) zu dem User der eine Message gesendet hat, angezeigt

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".profile.ProfileActivity" />
-        <activity android:name=".chat.ActivityChat2"/>
+        <activity android:name=".chat.ActivityChat2" />
+        <activity android:name=".profile.FriendProfileActivity"></activity>
     </application>
 
 </manifest>
