Weekday Widget erstellt und der neuen CreateMatchRoomAct hinzugefügt. Das Widget für die Wochentage wurde mit Hilfe von https://github.com/amulyakhare/TextDrawable programmiert. Der User kann über dieses Widget Wochentage auswählen an dem er Zeit hat. Über den Temporären Check Button in der Act. kann man sehen welche Daten aus dem Widget wie ausgelesen werden.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,8 @@
         </activity>
         <activity android:name=".profile.ProfileActivity" />
         <activity android:name=".chat.ActivityChat2" />
-        <activity android:name=".profile.FriendProfileActivity"></activity>
+        <activity android:name=".profile.FriendProfileActivity" />
+        <activity android:name=".creatematchroom.CreateMatchRoomActivity"></activity>
     </application>
 
 </manifest>
