--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'com.jakewharton.threetenabp:threetenabp:1.0.5'
     implementation 'de.hdodenhof:circleimageview:2.1.0'
     implementation 'com.yarolegovich:lovely-dialog:1.0.4'
+    implementation'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
 
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
     testImplementation 'junit:junit:4.12'
